--- a/corona/source/scss/style.scss
+++ b/corona/source/scss/style.scss
@@ -114,3 +114,4 @@ footer {background-color: #3f3f3f;padding-top: 50px;border-top:4px solid silver;
 .off4_img {width: 100%;}
 .off4__text {font-weight: normal;}
 .of4__text {font-weight: normal;}
+.lec__img {width:100%;}
