--- a/corona/source/css/style.css
+++ b/corona/source/css/style.css
@@ -118,11 +118,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #contact {
   color: #0B0B61;
-  background: url("/img/contact.jpg") no-repeat;
-  background-size: cover;
-  -o-background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover; }
+  background-color: #D8D8D8; }
 
 .contact__title {
   padding-top: 50px; }
