--- a/corona/source/scss/style.scss
+++ b/corona/source/scss/style.scss
@@ -31,7 +31,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: inherit;}
 .about__color {color: #FA5858}
 .about__href {padding-right: 15px;}
 .about a {color:#222;font-weight: normal;}
-#contact {color:#0B0B61;background:url("/img/contact.jpg") no-repeat;background-size: cover;-o-background-size: cover;-moz-background-size: cover;-webkit-background-size: cover;}
+#contact {color:#0B0B61;background-color: #D8D8D8;}
 .contact__title {padding-top: 50px;}
 .contact__text {font-size: 18px;font-weight: normal;padding-top: 15px;}
 .btn__info {padding: 50px 0px;border-radius: 20px;}
